--- a/main.html
+++ b/main.html
@@ -10,6 +10,35 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>My Playlist</h1>
+	<div class="rectangle">
+		<ul>
+			<li><a target="_blank">Song 1</a></li>
+			<li><a target="_blank">Song 2</a></li>
+			<li><a target="_blank">Song 3</a></li>
+			<li><a target="_blank">Song 4</a></li>
+			<li><a target="_blank">Song 5</a></li>
+		</ul>
+	</div>
+	<h2>Now Playing...</h2>
+	
+	
+	<div class = "rectangle2">
+		<!-- <video src="https://www.w3schools.com/tags/movie.mp4"  class="player_one" style="width:80%" controls></video>
+		<h2>MP3 songs</h2>
+		<p>Maan Meri Jaan</p>
+		<audio src="https://www.pagalworld.com.se/files/download/id/64630" class="player_two" style="width:100%" controls ></audio> -->
+		<video class="player_one" controls >
+			<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+		</video>
+
+		<h2>MP3 songs</h2>
+		<p>Maan Meri Jaan</p>
+
+		<audio class="player_two" controls >
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
+		</audio>
+	</div>
 
 </body>
 
